add: add umas imagens na frontpage

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Padaria Artesanal</title>
+    <title>Receitas da gigi</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="https://fav.farm/🥐" type="image/x-icon">
 </head>
@@ -25,7 +25,12 @@
         <section class="hero-slideshow">
             <img src="img/banner-1.jpeg" class="slide active" alt="Pães artesanais">
             <img src="img/banner-2.jpg" class="slide" alt="Croissants">
-            <img src="img/banner-3.jpg" class="slide" alt="Bolo">
+            <img src="img/banner-3.jpg" class="slide" alt="Bolão">
+            <img src="img/banner-4.webp" class="slide" alt="Mais Pãeszinhos">
+            <img src="img/banner-5.jpg" class="slide" alt="Competição de padero">
+            <img src="img/banner-6.jpg" class="slide" alt="Padaria chique">
+            <img src="img/banner-7.jpg" class="slide" alt="Dona zilda">
+
 
             <div class="overlay-texto">
                 <h2>As melhores receitas aqui!</h2>
@@ -67,7 +72,7 @@
                 <img src="img/pfp-pic.jpeg" alt="Euuuu"
                     class="foto-perfil">
                 <h3>Saudem a mestre cuca 👩‍🍳</h3>
-                <p>Sou a chefe Giovanna e aqui compartilho minhas receitas.</p>
+                <p>Sou a chefe Giovanna e aqui compartilho minhas receitas. (na verdade gerei com ia </p>
             </div>
         </div>
 
